// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ReplyCommentForm
  id="comment-id"
  max={100}
  min={3}
  onCancel={[Function]}
  onChange={[Function]}
  onSubmit={[Function]}
  parentUsername="Joe"
  rteRef={[Function]}
/>
`;

exports[`renders with initialValues 1`] = `
<ReplyCommentForm
  id="comment-id"
  initialValues={
    Object {
      "body": "Hello World!",
    }
  }
  max={100}
  min={3}
  onCancel={[Function]}
  onChange={[Function]}
  onSubmit={[Function]}
  parentUsername="Joe"
  rteRef={[Function]}
/>
`;
